--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Personal Potfolio</title>
+    <title>Potfolio Website</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -36,19 +36,20 @@
     <!-- home section design -->
     <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>Nishat Mahmud</span><span class="animate" style="--i:2;"></span></h1>
+            <h1>Hi, I'm <span>Einstein Mokua</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
-                <h3>Front-End Developer</h3>
+                <h3>Full-Stack Developer</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>I am a dedicated, self-assured, and eager learner who is constantly looking for opportunities to pick up
-                the new abilities.
-                I particularly want to put my knowledge and experience in Graphic Design, Web Development, and Android
-                Development to use.
-                To the best of my knowledge, avidly seeks to serve a professional organization with sincere devotion,
-                diligence, and commitment.
-                I have five years of experience managing a YouTube channel, therefore I also have knowledge with video
-                editing.
+            <p>
+                I am a dedicated, self-assured, and eager learner who is constantly looking for opportunities to pick
+                up new abilities. I particularly want to put my knowledge and experience in Graphic Design, Web Development,
+                 and Android Development to use. I avidly seek to serve a professional organization with sincere devotion,
+                  diligence, and commitment.
+                  I am a full-stack web developer proficient in languages such as JavaScript, Python, and PHP.
+                   With 2 years of experience in Data Science, I am currently training in machine learning. I have
+                    successfully completed projects for various clients. Additionally, I am a certified cybersecurity
+                     technician and have pursued ICDL.
                 <span class="animate" style="--i:4;"></span>
             </p>
 
@@ -75,19 +76,17 @@
         <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
-            <img src="images/about.jpg" alt="">
+            <img src="images/about.png" alt="">
             <span class="circle-spin"></span>
             <span class="animate scroll" style="--i:2;"></span>
         </div>
 
         <div class="about-content">
             <h3>Hi there! Glad to see you here.<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Hello! Nishat Mahmud here. A technology fanatic!<br>
-                Currently, I am enrolled in the Department of
-                Computer Science and Engineering at Jagannath
-                University in Dhaka. My early education was
-                completed from Mymensingh Zilla School and Govt.
-                Ananda Mohon College in Mymensingh.
+            <p>Hello! Einstein Mokua here. A technology fanatic!<br>
+                Currently, I am enrolled in the Moringa School as a
+                software engineering student. My early education was
+                completed from Jomo Kenyatta University in 2024.
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
